<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgMain"
        android:src="@drawable/studenten"
        style="@style/Bilder" />

    <TextView
        android:id="@+id/txtMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/uni_stadt_text"
        style="@style/Fragen"
        android:text="@string/Frage_vier"/>

    <TextView
        android:id="@+id/erklärung"
        style="@style/Erklaerung"
        android:layout_below="@+id/uni_stadt_text"
        android:text="@string/Erklärung"/>

   <EditText
       android:id="@+id/uni_stadt"
       style="@style/Edit_Text"
       android:hint="@string/uni_stadt" />

</RelativeLayout>