<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgMain"
        android:src="@drawable/wattenmeer"
        style="@style/Bilder" />

    <TextView
        android:id="@+id/txtMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/Fragen"
        android:text="@string/Frage_eins"/>

    <RadioGroup
        style="@style/Radio_Group">
        <RadioButton
            android:id="@+id/yes_radio_button"
            style="@style/Radio_Button"
            android:text="@string/ja" />
        <RadioButton
            android:id="@+id/no_radio_button"
            style="@style/Radio_Button"
            android:text="@string/nein" />
    </RadioGroup>
</RelativeLayout>
